updated components landing page #299

--- a/pages/components.html
+++ b/pages/components.html
@@ -7,17 +7,17 @@ permalink: "components.html"
 
 
 <h1 class="mt-lg-0">Components</h1>
-<p>
- The following pages include component examples as well as documentation that describe the usage
- of each component. On any given page you will find a working example of the component, a
- description of the various classes used in the creation of the component,
- as well as the source code that you can copy and past from should you need to. The following
- pages help to serve as a styleguide as well as documentation.
-</p>
+<p>Components are the reusable building blocks of the California State Template.</p>
+<p>Each component is designed to enhance user experiences, and has been created to work together to create patterns.</p>
+<p>Our components are:</p>
+<ul>
+ <li>Created with performance and accessibility in mind</li>
+ <li>Usable in any framework</li>
+</ul>
 
-<h2>Available components</h2>
+<h2>All components </h2>
 
-
+<p>Use these components to present information and images.</p>
 
 <div class="row">
  <div class="col-md-4 m-t-md">
@@ -29,7 +29,8 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Accordion</h3>
-    <p class="font-size-16 color-black">An expandable section of content that lets people choose what they want to see
+    <p class="font-size-16 color-black">An accordion is a list of headers that hide or reveal additional content when
+     selected
     </p>
    </div>
   </a>
@@ -42,31 +43,12 @@ permalink: "components.html"
     <img src="/images/components/icon-alert.jpg" alt="Alert banner component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Alert Banner</h3>
-    <p class="font-size-16 color-black">A space for high-priority information that can include an icon and links</p>
+    <h3 class="h5 m-t-0">Alert banner</h3>
+    <p class="font-size-16 color-black">An alert keeps users informed of important and sometimes time-sensitive changes
+    </p>
    </div>
   </a>
  </div>
-
- <div class="col-md-4 m-t-md">
-  <a href="/components/large-header-banner.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Alert banner component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-banner.jpg" alt="Banner component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Banner</h3>
-    <p class="font-size-16 color-black">The banner component is a full screen hero banner</p>
-   </div>
-  </a>
- </div>
-</div>
-
-
-
-
-<div class="row">
  <div class="col-md-4 m-t-md">
   <a href="/components/blockquotes.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -75,13 +57,20 @@ permalink: "components.html"
     <img src="/images/components/icon-blockquote.jpg" alt="Blockquotes component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Blockquotes</h3>
-    <p class="font-size-16 color-black">Blockquotes are used for quoting blocks of content from another source within
-     your document
+    <h3 class="h5 m-t-0">Blockquote</h3>
+    <p class="font-size-16 color-black">A blockquote emphasizes important speaker quotes or excerpts
     </p>
    </div>
   </a>
  </div>
+
+</div>
+
+
+
+
+<div class="row">
+
  <div class="col-md-4 m-t-md">
   <a href="/components/breadcrumb.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -91,7 +80,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Breadcrumb</h3>
-    <p class="font-size-16 color-black">The breadcrumb indicate the current page's location within a navigational
+    <p class="font-size-16 color-black">A breadcrumb indication of the current page's location within a navigational
      hierarchy</p>
    </div>
   </a>
@@ -105,19 +94,14 @@ permalink: "components.html"
     <img src="/images/components/icon-buttons.jpg" alt="Buttons component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Buttons</h3>
-    <p class="font-size-16 color-black">We use the buttons for actions in forms, surveys, dialogs, and other call to
-     action sections
+    <h3 class="h5 m-t-0">Button</h3>
+    <p class="font-size-16 color-black">A button draws attention to your primary call to action with a large clickable
+     surface
     </p>
    </div>
   </a>
  </div>
-</div>
 
-
-
-
-<div class="row">
  <div class="col-md-4 m-t-md">
   <a href="/components/cards.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -133,6 +117,13 @@ permalink: "components.html"
    </div>
   </a>
  </div>
+</div>
+
+
+
+
+<div class="row">
+
  <div class="col-md-4 m-t-md">
   <a href="/components/countdown.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -141,45 +132,9 @@ permalink: "components.html"
     <img src="/images/components/icon-countdown.jpg" alt="Countdown component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Countdown</h3>
-    <p class="font-size-16 color-black">Countdown timer component is used to show countdown to a specific date or an
-     event
-    </p>
-   </div>
-  </a>
- </div>
- <div class="col-md-4 m-t-md">
-  <a href="/components/featured-narrative.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Featureed Narrative component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-narrative.jpg" alt="Featureed narrative component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Featured Narrative</h3>
-    <p class="font-size-16 color-black">The Featureed Narrative calls out an important bit of content within paragraphs
-    </p>
-   </div>
-  </a>
- </div>
-
-
-</div>
-
-
-
-<div class="row">
- <div class="col-md-4 m-t-md">
-  <a href="/components/featured-search.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Featured Search component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-search.jpg" alt="Featured Search component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Featured Search</h3>
-    <p class="font-size-16 color-black">Featured search component is the active search box placed inside of the banner
-     section
+    <h3 class="h5 m-t-0">Countdown timer</h3>
+    <p class="font-size-16 color-black">A countdown timer emphasizes an important event by counting toward or away from
+     a fixed point in time
     </p>
    </div>
   </a>
@@ -192,8 +147,8 @@ permalink: "components.html"
     <img src="/images/components/icon-form.jpg" alt="Form components" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Form Styles</h3>
-    <p class="font-size-16 color-black">Form controls examples that have different styles and treatmets
+    <h3 class="h5 m-t-0">Form elements</h3>
+    <p class="font-size-16 color-black">A form allows visitors to submit information to a server
     </p>
    </div>
   </a>
@@ -201,17 +156,21 @@ permalink: "components.html"
  <div class="col-md-4 m-t-md">
   <a href="/components/horizontal-rules.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Horizontal rules component example">
+   title="Horizontal separator component example">
    <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-rule.jpg" alt="Horizontal rule component" class="img-fluid">
+    <img src="/images/components/icon-rule.jpg" alt="Horizontal separator component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Horizontal Rules</h3>
-    <p class="font-size-16 color-black">Horizontal rule is line element that is used to separate content</p>
+    <h3 class="h5 m-t-0">Horizontal separator</h3>
+    <p class="font-size-16 color-black">The horizontal separator is a style component that uses a line to separate
+     content into sections</p>
    </div>
   </a>
  </div>
+
+
 </div>
+
 
 
 
@@ -226,7 +185,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Lists</h3>
-    <p class="font-size-16 color-black">HTML lists allow web developers to group a set of related items in lists
+    <p class="font-size-16 color-black">A list is a vertical grouping of related content
     </p>
    </div>
   </a>
@@ -240,10 +199,47 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Modal</h3>
-    <p class="font-size-16 color-black">Modals offer a lightweight, multi-purpose JavaScript popup that’s customizable
-     and
-     responsive
+    <p class="font-size-16 color-black">A modal displays content in a temporary window that appears over the page
+     content
     </p>
+   </div>
+  </a>
+ </div>
+ <div class="col-md-4 m-t-md">
+  <a href="/components/parallax.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+   title="Parallax component example">
+   <div class="p-a-md d-flex align-content-center">
+    <img src="/images/components/icon-parallax.jpg" alt="Parallax component" class="img-fluid">
+   </div>
+   <div class="p-a">
+    <h3 class="h5 m-t-0">Parallax</h3>
+    <p class="font-size-16 color-black">The parallax is a visual design component. When scrolling, it allows background
+     and foreground elements to move at different speeds
+    </p>
+   </div>
+  </a>
+ </div>
+
+
+</div>
+
+
+
+
+<div class="row">
+
+
+ <div class="col-md-4 m-t-md">
+  <a href="/components/progress-blocks.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+   title="Progress tracker component example">
+   <div class="p-a-md d-flex align-content-center">
+    <img src="/images/components/icon-bar.jpg" alt="Progress tracker component" class="img-fluid">
+   </div>
+   <div class="p-a">
+    <h3 class="h5 m-t-0">Progress tracker</h3>
+    <p class="font-size-16 color-black">A progress tracker displays the steps and progress through a journey</p>
    </div>
   </a>
  </div>
@@ -255,67 +251,26 @@ permalink: "components.html"
     <img src="/images/components/icon-number.jpg" alt="Number counter component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Number counter</h3>
-    <p class="font-size-16 color-black">Number counter is JavaScript based number animation to show some activity on the
-     webpage</p>
+    <h3 class="h5 m-t-0">Rolling number counter</h3>
+    <p class="font-size-16 color-black">The rolling number counter adds animation to numbers</p>
    </div>
   </a>
  </div>
-
-
-</div>
-
-
-
-
-<div class="row">
  <div class="col-md-4 m-t-md">
-  <a href="/components/parallax.html"
+  <a href="/components/featured-search.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Parallax component example">
+   title="Search bar component example">
    <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-parallax.jpg" alt="Parallax component" class="img-fluid">
+    <img src="/images/components/icon-search.jpg" alt="Search bar component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Parallax</h3>
-    <p class="font-size-16 color-black">Parallax scrolling is a feature where the background content image is moved at a
-     different
-     speed than the foreground content while scrolling
+    <h3 class="h5 m-t-0">Search bar</h3>
+    <p class="font-size-16 color-black">The search bar allows visitors to search for specific content using keywords or
+     phrases
     </p>
    </div>
   </a>
  </div>
- <div class="col-md-4 m-t-md">
-  <a href="/components/progress-bars.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Progress Bar component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-progress.jpg" alt="Progress Bar components" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Progress Bar</h3>
-    <p class="font-size-16 color-black">Progress Bar provides up-to-date feedback on the progress of a workflow or
-     action
-    </p>
-   </div>
-  </a>
- </div>
- <div class="col-md-4 m-t-md">
-  <a href="/components/progress-blocks.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Progress Blocks component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-bar.jpg" alt="Progress Blocks component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Progress Blocks</h3>
-    <p class="font-size-16 color-black">Progress blocks is progress indicators that display progress through a
-     sequence by breaking it up into multiple logical and numbered steps</p>
-   </div>
-  </a>
- </div>
-
-
 </div>
 
 
@@ -326,31 +281,28 @@ permalink: "components.html"
  <div class="col-md-4 m-t-md">
   <a href="/components/socialsharer.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Social Sharer example">
+   title="Social media icons example">
    <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-social.jpg" alt="Social Sharer component" class="img-fluid">
+    <img src="/images/components/icon-social.jpg" alt="Social media icons component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Social Sharer</h3>
-    <p class="font-size-16 color-black">This module adds a group of buttons to your page that allows visitors to share
-     the page via
-     various social media services
+    <h3 class="h5 m-t-0">Social media icons </h3>
+    <p class="font-size-16 color-black">The social media icons component lets you share your agency’s social media pages
+     with visitors
     </p>
    </div>
   </a>
  </div>
  <div class="col-md-4 m-t-md">
-  <a href="/components/step-list.html"
+  <a href="/components/tables.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Step List component example">
+   title="Social Sharer example">
    <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-step.jpg" alt="Step List components" class="img-fluid">
+    <img src="/images/components/icon-table.jpg" alt="Table component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Step List</h3>
-    <p class="font-size-16 color-black">The step list is a numbered list that has number for each item, lines connecting
-     all the
-     circled numbers, title and detail for each step
+    <h3 class="h5 m-t-0">Table</h3>
+    <p class="font-size-16 color-black">A table displays large amounts of data in rows and columns
     </p>
    </div>
   </a>
@@ -364,9 +316,8 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Tabs</h3>
-    <p class="font-size-16 color-black">Tabs lets you create content using list of links that are linked to a section
-     elements with
-     each its own content</p>
+    <p class="font-size-16 color-black">Tabs organize related content into panels and enable visitors to navigate
+     between them</p>
    </div>
   </a>
  </div>
@@ -377,57 +328,16 @@ permalink: "components.html"
 
 
 
-<div class="row">
- <div class="col-md-4 m-t-md">
-  <a href="/components/timeline.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Timeline component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-timeline.jpg" alt="Timeline components" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Timeline</h3>
-    <p class="font-size-16 color-black">Timeline is a display of a list of events (or milestones) in chronological order
-    </p>
-   </div>
-  </a>
- </div>
-
- <div class="col-md-4 m-t-md">
-  <a href="/components/tables.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Social Sharer example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-table.jpg" alt="Table component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Table</h3>
-    <p class="font-size-16 color-black">The table componenent is a structured set of data made up of rows and columns
-    </p>
-   </div>
-  </a>
- </div>
-
-</div>
 
 
-
-
-<h3>Other examples:</h3>
-<ul class="list-primary">
- <li><a href="/css-shortcuts/css-units.html">CSS Units</a></li>
- <li><a href="/patterns.html">Content patterns</a></li>
- <li><a href="/visual-design/navsamples.html">Navigation Samples</a></li>
- <li><a href="/structure.html">Structural Components</a></li>
-</ul>
 
 
 
 
 <h3>Additional Bootstrap CSS & Components</h3>
 <p>
- We strongly recommend using the documented State Template Content Modules and
- Components
+ We strongly recommend using the documented State Web Template components and
+ patterns
  whenever possible; however, for more CSS classes and options as well as components
  we suggest
  utilizing what is available in Bootstrap first, before developing your own custom
