--- a/pages/patterns.html
+++ b/pages/patterns.html
@@ -32,17 +32,15 @@ permalink: "patterns.html"
   </a>
  </div>
  <div class="col-md-4 m-t-md">
-  <a href="/patterns/hero-info.html"
+  <a href="/patterns/hero-banner.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Hero Info example">
+   title="Alert banner component example">
    <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-hero.jpg" alt="Hero Info illustration" class="img-fluid">
+    <img src="/images/components/icon-banner.jpg" alt="Banner component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Hero Info</h3>
-    <p class="font-size-16 color-black">Hero Info is a large content section prominently placed on a web page, generally
-     in the
-     front and center</p>
+    <h3 class="h5 m-t-0">Hero banner</h3>
+    <p class="font-size-16 color-black">The banner component is a full screen hero banner</p>
    </div>
   </a>
  </div>
