--- a/pages/sample/hero-banner.html
+++ b/pages/sample/hero-banner.html
@@ -1,8 +1,8 @@
 ﻿---
 title: Hero Banner
-landing: Components
-layout: components.njk
-permalink: "components/large-header-banner.html"
+landing: patterns
+layout: patterns.njk
+permalink: "patterns/hero-banner.html"
 ---
 
 
