--- a/pages/sample/horizontal-separator.html
+++ b/pages/sample/horizontal-separator.html
@@ -1,14 +1,14 @@
 ---
-title: Horizontal Rules
+title: Horizontal separator
 landing: Components
 layout: components.njk
-permalink: "components/horizontal-rules.html"
+permalink: "components/horizontal-separator.html"
 ---
 
 
 
-<h1 class="mt-lg-0">Horizontal Rules</h1>
-<p>Horizontal rules <code>&lt;hr&gt;</code>'s get some styling by default. They will appear as a
+<h1 class="mt-lg-0">Horizontal separator</h1>
+<p>Horizontal separator <code>&lt;hr&gt;</code>'s get some styling by default. They will appear as a
  thin 1 pixel gray line. with margins top and bottom.</p>
 
 <h2>Default:</h2>
