--- a/pages/sample/search-bar.html
+++ b/pages/sample/search-bar.html
@@ -1,8 +1,8 @@
 ---
-title: Featured Search
+title: Search bar
 landing: Components
 layout: navicons-landing.njk
-permalink: "components/featured-search.html"
+permalink: "components/search-bar.html"
 navigation: "../modules/nav-flex.html"
 search: Featured
 ---
