--- a/pages/sample/social-media-icons.html
+++ b/pages/sample/social-media-icons.html
@@ -1,15 +1,15 @@
 ﻿---
-title: Social Sharer
+title: Social media icons
 landing: Components
 layout: components.njk
-permalink: "components/socialsharer.html"
+permalink: "components/social-media-icons.html"
 ---
 
 
 
 <div class="row">
  <div class="half">
-  <h1 class="mt-lg-0">SocialSharer</h1>
+  <h1 class="mt-lg-0">Social media icons</h1>
   <p>This module adds a group of buttons to your page that allows visitors to share the page via
    various social media services. You may customize the appearance and position of the buttons
    by altering the socialsharer.less. You may also remove a button by deleting its
