Fixed breadcrumbs names

--- a/pages/patterns.html
+++ b/pages/patterns.html
@@ -8,7 +8,7 @@ permalink: "patterns.html"
 
 
 
-<h1 class="mt-lg-0">Content patterns</h1>
+<h1 class="mt-lg-0">Patterns</h1>
 <p>
  State Template content patterns are content modules and design solutions for specific user-focused tasks. Patterns
  often use
